Make the API safer and more consistent (#85)
